<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/tv_manual_credentials_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manual_credentials_message"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_manual_credentials_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/manual_credentials_username_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_manual_credentials_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_manual_credentials_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/manual_credentials_password_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_manual_credentials_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword|textNoSuggestions"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
